reductions and floats